fix: AggregateRoot.pullDomainEvents returns snapshot before clearing
Collections.unmodifiableList creates a live view of the backing list, so
the subsequent clear() emptied the returned list too. List.copyOf takes
an independent snapshot first.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>